Twilo/force-app/main/default/objects/TwilloConfig__c/TwilloConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Twillo Config</label>
</CustomObject>