Twilo/force-app/main/default/objects/TwilloConfig__c/fields/accountSid__c.field-meta.xml
<CustomField>
    <fullName>accountSid__c</fullName>
    <label>account Sid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>