Twilo/force-app/main/default/objects/TwilloConfig__c/fields/ceoNumber__c.field-meta.xml
<CustomField>
    <fullName>ceoNumber__c</fullName>
    <label>ceoNumber</label>
    <type>Phone</type>
</CustomField>