Twilo/force-app/main/default/objects/TwilloConfig__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <label>token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>